--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Ini aplikasi pengelolaan alokasi hardware versi 1
+Ini aplikasi pengelolaan alokasi hardware versi 1, by Nikko Haendratnio (nikko296@gmail.com)
+Digunakan untuk PT. Telkom Tbk. Divisi Sisfo Area Jakarta Utara
